Render Border have weird influence on compositing #35439

Closed
opened 2013-05-20 00:04:17 +02:00 by Shakanos · 6 comments

%%%--- Operating System, Graphics card ---
Windows 8 x64, GTX560SE

- Blender version with error, and version that worked ---

2.67 r56905 - with problem
2.66a - partially worked

- Short description of error ---

Viewport's 'Render Border...' have weird influence on compositing.
(I think it should not have any influence on compositing at all. Only on result in Render Layers.)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open attached .blend file.

  2. Hit F12 to render.
    ('Border' option have influence on compositing. I think it's incorrect behavior. In 2.66a 'Border' had no influence in this same situation.)

  3. Select the 'Render Layers' node in Node Editor and hit X to delete the node.
    (Note that when you delete the node, 'Border' is no longer influence on 'Render Result' in UV/Image Editor.)

  4. Hit F12 to render again.
    (Strange behavior. It's look like now 'Border' have influence on output resolution (but 'Crop' is unchecked) and at the same time it have influence on compositing given the new resolution. Border in border.)%%%

%%%--- Operating System, Graphics card --- Windows 8 x64, GTX560SE - Blender version with error, and version that worked --- 2.67 r56905 - with problem 2.66a - partially worked - Short description of error --- Viewport's 'Render Border...' have weird influence on compositing. (I think it should not have any influence on compositing at all. Only on result in Render Layers.) - Steps for others to reproduce the error (preferably based on attached .blend file) --- 0. Open attached .blend file. 1. Hit F12 to render. ('Border' option have influence on compositing. I think it's incorrect behavior. In 2.66a 'Border' had no influence in this same situation.) 2. Select the 'Render Layers' node in Node Editor and hit X to delete the node. (Note that when you delete the node, 'Border' is no longer influence on 'Render Result' in UV/Image Editor.) 3. Hit F12 to render again. (Strange behavior. It's look like now 'Border' have influence on output resolution (but 'Crop' is unchecked) and at the same time it have influence on compositing given the new resolution. Border in border.)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Current behavior was intended to allow as fast previews as possible (which was really needed for 4K ToS project). Unfortunately, this gave some issues with border+cropping. Was going to rethink this approach. Not sure border wouldn't have any affect on compo, but bugs and unpredictable results shall not happen :)

Will try to fix the issue this week.%%%

%%%Current behavior was intended to allow as fast previews as possible (which was really needed for 4K ToS project). Unfortunately, this gave some issues with border+cropping. Was going to rethink this approach. Not sure border wouldn't have any affect on compo, but bugs and unpredictable results shall not happen :) Will try to fix the issue this week.%%%

%%%Fixed in svn rev57604. Thanks for the report, closing.%%%

%%%Fixed in svn rev57604. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%What about the behavior, when after rendering Render Border is shown in 'Composite' layer until not do something in 'Node Editor'?
http://i.imgur.com/Z80sTPN.gif
It is not considered a bug or unpredictable result?%%%

%%%What about the behavior, when after rendering Render Border is shown in 'Composite' layer until not do something in 'Node Editor'? http://i.imgur.com/Z80sTPN.gif It is not considered a bug or unpredictable result?%%%

%%%Sorry for the delayed result.

The issue here is that you've got preview border and render border. Interaction might be improved from UI side, but for now wouldn't consider this is a bug.%%%

%%%Sorry for the delayed result. The issue here is that you've got preview border and render border. Interaction might be improved from UI side, but for now wouldn't consider this is a bug.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35439
No description provided.